--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="">Productos</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="views/productos.html">Productos</a></li>
                         <li><a href="">Sobre nosotros</a></li>
                         <li><a href="">Contacto</a></li>
                         <li><a href="">Cuenta</a></li>
@@ -72,7 +72,9 @@
         <h2 class="title">Featured products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="assets/img/product-1.jpg" alt="">
+                <a href="views/remera-roja.html">
+                    <img src="assets/img/product-1.jpg" alt="">
+                </a>
                 <h4>Red printed</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
@@ -311,7 +313,7 @@
         </div>
     </div>
 
-<!---------- Brands ---------->
+<!---------- Footer ---------->
 <div class="footer">
     <div class="container">
         <div class="row">
