--- a/index.html
+++ b/index.html
@@ -56,62 +56,65 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <img src="assets/img/category-1.jpg" alt="">
+                    <img src="assets/img/category-1.jpg" alt="" class="imagenes-hover">
                 </div>
                 <div class="col-3">
-                    <img src="assets/img/category-2.jpg" alt="">
+                    <img src="assets/img/category-2.jpg" alt="" class="imagenes-hover">
                 </div>
                 <div class="col-3">
-                    <img src="assets/img/category-3.jpg" alt="">
+                    <img src="assets/img/category-3.jpg" alt="" class="imagenes-hover">
                 </div>
             </div>
         </div>
     </div>
 
     <div class="small-container">
-        <h2 class="title">Featured products</h2>
+        <h2 class="title">Productos destacados</h2>
         <div class="row">
             <div class="col-4">
-                <a href="views/remera-roja.html">
+                <a href="views/productos/remeras/remera-roja.html">
                     <img src="assets/img/product-1.jpg" alt="">
                 </a>
-                <h4>Red printed</h4>
+                <h4>Remera roja Puma</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
                 <p>$2100</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-2.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/zapatillas/zapatillas-negras.html">
+                    <img src="assets/img/product-2.jpg" alt="">
+                </a>
+                <h4>Zapatillas negras HRX</h4>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <p>$21300</p>
+            </div>
+            <div class="col-4">
+                <a href="views/productos/pantalones/jogging-gris-adidas.html">
+                    <img src="assets/img/product-3.jpg" alt="">
+                </a>
+                <h4>Jogging gris adidas</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$7800</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-3.jpg" alt="">
-                <h4>Red printed</h4>
-                <div class="rating">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <p>$2100</p>
-            </div>
-            <div class="col-4">
-                <img src="assets/img/product-4.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/remeras/chomba-puma.html">
+                    <img src="assets/img/product-4.jpg" alt="">
+                </a>
+                <h4>Chomba azul puma</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -122,7 +125,7 @@
                 <p>$2100</p>
             </div>
         </div>
-        <h2 class="title">Latest Products</h2>
+        <h2 class="title">Ultimos productos publicados</h2>
         <div class="row">
             <div class="col-4">
                 <img src="assets/img/product-5.jpg" alt="">
@@ -146,7 +149,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$7800</p>
             </div>
             <div class="col-4">
                 <img src="assets/img/product-7.jpg" alt="">
@@ -255,7 +258,6 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i>
                     </div>
                     <img src="assets/img/user-1.png" alt="">
                     <h3>Usuario 1</h3>
@@ -271,7 +273,7 @@
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </div>
                     <img src="assets/img/user-2.png" alt="">
-                    <h3>Usuario 1</h3>
+                    <h3>Usuario 2</h3>
                 </div>
                 <div class="col-3">
                     <i class="fa-solid fa-quote-left"></i>
@@ -284,7 +286,7 @@
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </div>
                     <img src="assets/img/user-3.png" alt="">
-                    <h3>Usuario 1</h3>
+                    <h3>Usuario 3</h3>
                 </div>
             </div>
         </div>
