Creando todas las paginas de productos por separado

--- a/index.html
+++ b/index.html
@@ -122,25 +122,28 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$4300</p>
             </div>
         </div>
         <h2 class="title">Ultimos productos publicados</h2>
         <div class="row">
             <div class="col-4">
-                <img src="assets/img/product-5.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/zapatillas/zapatillas-grises-hrx.html">
+                    <img src="assets/img/product-5.jpg" alt="">
+                </a>
+                <h4>Zapatillas grises HRX</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$19800</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-6.jpg" alt="">
+                <a href="">
+                    <img src="assets/img/product-6.jpg" alt="">
+                </a>
                 <h4>Red printed</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
@@ -152,34 +155,38 @@
                 <p>$7800</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-7.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/accesorios/medias-hrx.html">
+                    <img src="assets/img/product-7.jpg" alt="">
+                </a>
+                <h4>Pack medias por 3 HRX</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$1700</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-8.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/accesorios/reloj-negro-fossil.html">
+                    <img src="assets/img/product-8.jpg" alt="">
+                </a>
+                <h4>Reloj negro Fossil</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-solid fa-star"></i>
                 </div>
-                <p>$2100</p>
+                <p>$27900</p>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="assets/img/product-9.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/accesorios/reloj-cronometro.html">
+                    <img src="assets/img/product-9.jpg" alt="">
+                </a>
+                <h4>Reloj con cronometro</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -187,11 +194,13 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$13000</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-10.jpg" alt="">
-                <h4>Red printed</h4>
+                <a href="views/productos/zapatillas/zapatillas-camufladas-hrx.html">
+                    <img src="assets/img/product-10.jpg" alt="">
+                </a>
+                <h4>Zapatillas camufladas HRX</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -199,29 +208,28 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$19800</p>
             </div>
             <div class="col-4">
                 <img src="assets/img/product-11.jpg" alt="">
-                <h4>Red printed</h4>
+                <h4>Zapatillas grises Roadster</h4>
                 <div class="rating">
-                    <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$2100</p>
+                <p>$17200</p>
             </div>
             <div class="col-4">
                 <img src="assets/img/product-12.jpg" alt="">
-                <h4>Red printed</h4>
+                <h4>Jogging negro Nike</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-solid fa-star"></i>
                 </div>
                 <p>$2100</p>
             </div>
