--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-2">
                     <h1>Dale un nuevo estilo <br>a tu trabajo</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam laboriosam dolorum dolorem odit cumque officia beatae facilis similique quibusdam dolores, ea asperiores fugit voluptas? <br>Nihil laudantium quas molestiae neque aperiam?</p>
-                    <a href="" class="btn">Explorar ahora &#8594;</a>
+                    <a href="views/productos.html" class="btn">Explorar ahora &#8594;</a>
                 </div>
                 <div class="col-2">
                     <img src="assets/img/image1.png" alt="">
@@ -141,18 +141,17 @@
                 <p>$19800</p>
             </div>
             <div class="col-4">
-                <a href="">
+                <a href="views/productos/remeras/remera-negra-puma.html">
                     <img src="assets/img/product-6.jpg" alt="">
                 </a>
-                <h4>Red printed</h4>
+                <h4>Remera negra Puma</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>$7800</p>
+                <p>$2300</p>
             </div>
             <div class="col-4">
                 <a href="views/productos/accesorios/medias-hrx.html">
@@ -192,7 +191,6 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
                 <p>$13000</p>
             </div>
@@ -211,7 +209,9 @@
                 <p>$19800</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-11.jpg" alt="">
+                <a href="views/productos/zapatillas/zapatillas-grises-roadster.html">
+                    <img src="assets/img/product-11.jpg" alt="">
+                </a>
                 <h4>Zapatillas grises Roadster</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
@@ -222,7 +222,9 @@
                 <p>$17200</p>
             </div>
             <div class="col-4">
-                <img src="assets/img/product-12.jpg" alt="">
+                <a href="views/productos/pantalones/jogging-negro-nike.html">
+                    <img src="assets/img/product-12.jpg" alt="">
+                </a>
                 <h4>Jogging negro Nike</h4>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
@@ -231,7 +233,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>$2100</p>
+                <p>$9300</p>
             </div>
         </div>
     </div>
