--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                         <li><a href="">Cuenta</a></li>
                     </ul>
                 </nav>
-                <img src="assets/img/cart.png" alt="" width="30px" height="30px">
+                <a href="views/carrito.html">
+                    <img src="assets/img/cart.png" alt="" width="30px" height="30px">
+                </a>
                 <img src="assets/img/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="row">
